# kde-desktop-weather

./: .gitignore  CMakeLists.txt  DesktopWeather.config  DesktopWeather.files  README.md  metadata.desktop
package/: metadata.desktop
package/contents/: contrast.js
package/contents/code/: contrast.js  timeUtils.js
package/contents/config/: main.xml
package/contents/ui/: PrecipViewer.qml  TempViewer.qml  TopPanel.qml  WindViewer.qml  config.ui  main.qml
plasmoid/: metadata.desktop
plasmoid/contents/code/: timeUtils.js
plasmoid/contents/config/: config.qml
plasmoid/contents/ui/: PrecipViewer.qml  TempViewer.qml  TopPanel.qml  WindViewer.qml  config.qml  config.ui  main.qml
